# smartstring

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  fuzz.yml
benches/: smartstring.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ordering_compact.rs  ordering_prefixed.rs  smartstring_compact.rs  smartstring_lazycompact.rs  smartstring_prefixed.rs
proptest-regressions/: test.txt
src/: arbitrary.rs  bincode.rs  boxed.rs  casts.rs  config.rs  inline.rs  iter.rs  lib.rs  marker_byte.rs  ops.rs  proptest.rs  serde.rs  tagged_ptr.rs  test.rs
