[package]
name = "smartstring"
version = "0.2.3"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Compact inlined strings"
repository = "https://github.com/bodil/smartstring"
documentation = "http://docs.rs/smartstring"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["cache-local", "cpu-cache", "small-string", "sso", "inline-string"]
exclude = ["release.toml", "proptest-regressions/**"]

[package.metadata.docs.rs]
features = ["arbitrary", "proptest", "serde"]

[[bench]]
name = "smartstring"
harness = false

[features]
default = ["std"]
std = []
test = ["arbitrary", "arbitrary/derive"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1", optional = true }
arbitrary = { version = "0.4", optional = true }
proptest = { version = "0.10", optional = true }

[dev-dependencies]
proptest = "0.10"
proptest-derive = "0.2"
criterion = "0.3.2"
rand = "0.7.3"
serde_test = "1"
