[package]
name = "smartstring"
version = "0.2.10"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2021"
license = "MPL-2.0+"
description = "Compact inlined strings"
repository = "https://github.com/bodil/smartstring"
documentation = "http://docs.rs/smartstring"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["cache-local", "cpu-cache", "small-string", "sso", "inline-string"]
exclude = ["release.toml", "proptest-regressions/**"]
rust-version = "1.57"

[package.metadata.docs.rs]
features = ["arbitrary", "proptest", "serde"]

[badges]
travis-ci = { repository = "bodil/smartstring", branch = "master" }

[[bench]]
name = "smartstring"
harness = false

[features]
default = ["std"]
std = []
test = ["std", "arbitrary", "arbitrary/derive"]

[dependencies]
static_assertions = "1"
serde = { version = "1", optional = true }
arbitrary = { version = "1", optional = true }
proptest = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
proptest-derive = "0.3"
criterion = "0.3"
rand = "0.8"
serde_test = "1"
